src/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <referenceTo>Author__c</referenceTo>
        <relationshipLabel>Books</relationshipLabel>
        <relationshipName>Books</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <picklist>
            <picklistValues>
                <fullName>Audiobook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardcover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperback</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ISBN</label>
        <length>13</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>